[package]
name = "algorithm_collection"
version = "0.0.1"
authors = ["RustyPyGuy <87586467+RustyPyGuy@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "~0.8.3"
integer-sqrt = "~0.1.5"
